--- a/src/main/resources/static/css/registerstyle.css
+++ b/src/main/resources/static/css/registerstyle.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(./registerbackground.jpg);
+    background-image: url(registerbackground.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
