--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="icon" type="image/x-icon" href="../../../../../../Desktop/OrionStore/img/favicon/favicon.ico">
     <title>Orion Store - kosmiczny sklep internetowy</title>
 </head>
@@ -22,7 +22,7 @@
                 <a href="">Zapomniałeś hasla?</a>
             </form>
             <div class="side">
-                <img src="../static/img/signature.png" th:src="@{img/signature.png}"/>
+                <img src="css/orionimg.png">
             </div>
         </div>
     </section>
