--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,17 +9,34 @@
 
 <body>
     <nav>
-        <img src="css/logo.png" class="logo" alt="OrionStore">
+        <a href="localhost:8080/"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
         <ul>
             <li></li>
-            <li><a href="">Strona główna</a></li>
             <li><a href="">O nas</a></li>
             <li><a href="">Regulamin</a></li>
             <li><a href="">Promocje</a></li>
             <li><a href="">Kontakt</a></li>
+            <li><a href="">Koszyk</a></li>
             <li><a href="">Ustawienia</a></li>
         </ul>
     </nav>
+
+    <div class="content">
+        <div class="item">
+            <p class="specific-item">Procesor</p>
+            <img src="/css/products/intelcorei7.jpg" alt="">
+            <p>Procsor Intel Core I7 13700K</p>
+            <button>KUP TERAZ</button>
+        </div>
+        <div class="item">
+            <p class="specific-item">Procesor</p>
+            <img src="/css/products/intelcorei7.jpg" alt="">
+            <p>Procsor Intel Core I7 13700K</p>
+            <button>KUP TERAZ</button>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
