Some SpringSecurity features added 1.29

--- a/src/main/resources/templates/notfound.html
+++ b/src/main/resources/templates/notfound.html
@@ -9,7 +9,7 @@
         <div class="dot">
             <div class="error">
             <h1>O nie, czarna dziura!</h1>
-            <h2>ERROR 403 - Odmowa dostępu</h2>
+            <h2>ERROR 404 - Nie znaleziono strony</h2>
             <h4>OrionStore</h4>
             </div>
         </div>
