--- a/src/main/resources/static/css/accessdeniedstyle.css
+++ b/src/main/resources/static/css/accessdeniedstyle.css
@@ -3,18 +3,39 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 body {
-    background-image: url(./galaxy.png);
+    background: url(./galaxy.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-h1, h2 {
-    color: white;
+.dot {
+    height: 50vh;
+    width: 50vh;
+    background-color: black;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
     top: 50%;
     left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-box-shadow: 0px 0px 43px 0px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px 0px 43px 0px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 43px 0px rgba(255, 255, 255, 1);
+}
+
+.error {
+    color:white;
+    position: absolute;
+    width: inherit;
+    height: auto;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
 }
