--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(./galaxy.png);
+    background: url(./galaxy.png) no-repeat center center fixed;;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
