--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,10 +13,13 @@
 <body>
     <section>
         <div class="container">
-            <form action="" class="form">
+            <form class="form-signin" method="POST" th:action="@{/login}">
                 <h2>Zaloguj się</h2>
+                <span th:text="${message}"></span>
                 <input type="email" name="email" class="box" placeholder="Wpisz email">
                 <input type="password" name="password" class="box" placeholder="Wpisz hasło">
+                <span class="has-error" th:text="${error}"></span>
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                 <input type="submit" value="Logowanie" id="submit">
                 <a href="">Nie masz konta? Zarejestruj się!</a>
                 <a href="">Zapomniałeś hasla?</a>
