--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <div class="container">
-            <form class="form-signin" method="POST" th:action="@{/login}">
+            <form class="form" method="POST" th:action="@{/login}">
                 <h2>Zaloguj się</h2>
                 <span th:text="${message}"></span>
                 <input type="email" name="email" class="box" placeholder="Wpisz email">
