Register bugs fixed 2.01

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,11 +15,12 @@
         <div class="container">
             <form th:action="@{/register}" method="post" th:object="${user}" class="form">
                 <h2>Zarejestruj się</h2>
-                <input type="firstname" class="box" , placeholder="Wpisz imię" th:field="*{firstName}">
-                <input type="lastname" class="box" , placeholder="Wpisz nazwisko" th:field="*{lastName}">
-                <input type="email" name="email" class="box" placeholder="Wpisz email" th:field="*{email}">
+
+                <input type="firstname" class="box" name="firstName" placeholder="Wpisz imię" th:field="*{firstName}">
+                <input type="lastname" class="box" name="lastName" placeholder="Wpisz nazwisko" th:field="*{lastName}">
+                <input type="email"  class="box" name="email" placeholder="Wpisz email" th:field="*{email}">
                 <input type="password" name="password" class="box" placeholder="Wpisz hasło" th:field="*{password}">
-                <input type="submit" value="Logowanie" id="submit">
+                <input type="submit" value="Rejestracja" id="submit">
             </form>
             <div class="side">
                 <img src="css/orionimg.png">
