--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,28 +11,22 @@
 </head>
 
 <body>
-    <section>
-        <div class="container">
-            <form class="form" method="POST" th:action="@{/login}">
-                <h2>Zaloguj się</h2>
-                <span th:text="${message}"></span>
-                <input type="email" name="email" class="box" placeholder="Wpisz email">
-                <input type="password" name="password" class="box" placeholder="Wpisz hasło">
-                <span class="has-error" th:text="${error}"></span>
-                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-                <input type="submit" value="Logowanie" id="submit">
-                <a href="">Nie masz konta? Zarejestruj się!</a>
-                <a href="">Zapomniałeś hasla?</a>
-                <input
-                        type="hidden"
-                        th:name="${_csrf.parameterName}"
-                        th:value="${_csrf.token}" />
-            </form>
-            <div class="side">
-                <img src="css/orionimg.png">
-            </div>
+<section>
+    <div class="container">
+        <form class="form">
+        <h2>Zaloguj się</h2>
+        <span th:text="${message}"></span>
+        <input type="email" name="email" class="box" placeholder="Wpisz email">
+        <input type="password" name="password" class="box" placeholder="Wpisz hasło">
+        <input type="submit" value="Logowanie" id="submit">
+        <a href="">Nie masz konta? Zarejestruj się!</a>
+        <a href="">Zapomniałeś hasla?</a>
+        </form>
+        <div class="side">
+            <img src="css/orionimg.png">
         </div>
-    </section>
+    </div>
+</section>
 </body>
 
 </html>
