--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,22 +11,26 @@
 </head>
 
 <body>
-    <section>
-        <div class="container">
+<section>
+    <div class="container">
             <form th:action="@{/register}" method="post" th:object="${user}" class="form">
                 <h2>Zarejestruj się</h2>
 
                 <input type="firstname" class="box" name="firstName" placeholder="Wpisz imię" th:field="*{firstName}">
                 <input type="lastname" class="box" name="lastName" placeholder="Wpisz nazwisko" th:field="*{lastName}">
-                <input type="email"  class="box" name="email" placeholder="Wpisz email" th:field="*{email}">
+                <input type="email" class="box" name="email" placeholder="Wpisz email" th:field="*{email}">
                 <input type="password" name="password" class="box" placeholder="Wpisz hasło" th:field="*{password}">
                 <input type="submit" value="Rejestracja" id="submit">
+
+                <div th:if="${param.success}">
+                    <p>Twoje konto zostało pomyślnie założone.</p>
+                </div>
             </form>
-            <div class="side">
-                <img src="css/orionimg.png">
-            </div>
+        <div class="side">
+            <img src="css/orionimg.png">
         </div>
-    </section>
+        </div>
+</section>
 </body>
 
 </html>
