Thymeleaf fields added to item window 02.07

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,59 +23,10 @@
 
     <div class="content">
         <div class="item">
-            <p class="specific-item">Procesor</p>
+            <p class="specific-item" th:text="${item.getCategory()}"></p>
             <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
-            <button>KUP TERAZ</button>
-        </div>
-        <div class="item">
-            <p class="specific-item">Procesor</p>
-            <img src="/css/products/intelcorei7.jpg" alt="">
-            <p>Procsor Intel Core I7 13700K</p>
-            <p>2229,00 zł</p>
+            <p th:text="${item.getItemName()}"></p>
+            <p th:text="${item.getPrice()}"></p>
             <button>KUP TERAZ</button>
         </div>
     </div>
