--- a/src/main/resources/static/css/itemadd.css
+++ b/src/main/resources/static/css/itemadd.css
@@ -13,8 +13,8 @@ body {
 }
 
 nav {
-    background: rgb(0, 3, 40);
-    background: linear-gradient(90deg, rgba(0, 3, 40, 1) 0%, rgba(171, 43, 43, 1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     height: 60px;
     width: 100%;
 }
@@ -56,20 +56,20 @@ nav a img {
     height: 90%;
 }
 
-.content {
-    background-color: #d9dfe4;
-    width: 10%;
-    height: 400px;
-    margin: auto;
-    margin-top: 40px;
-    border-radius: 5px;
-    display: block;
-    padding:30px;
-    text-align: center;
-
+form {
+    width: 300px;
+    font-size: 15px;
+    margin: 0 auto;
 }
 
-.item button {
+form input {
+    border-radius: 8px;
+    border-width: 1px;
+    width: 200px;
+    height: 30px;
+}
+
+button {
     margin: auto;
     margin-top: 15px;
     font-weight: 0;
@@ -88,7 +88,7 @@ nav a img {
     cursor: pointer;
 }
 
-.item button:hover {
+button:hover {
 
     transition: 500ms;
     padding: 10px 50px;
