--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
             <h2>Zaloguj się</h2>
             <input type="text" id="username" name="username" class="box" placeholder="Wpisz email">
             <input type="password" id="password" name="password" class="box" placeholder="Wpisz hasło">
-            <input type="submit" value="Logowanie"/>
+            <input type="submit" value="Logowanie" id="submit"/>
             <a href="">Zapomniałeś hasla?</a>
         </form>
         <div class="side">
