--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav>
-        <a href="localhost:8080/"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
+        <a th:href="@{/}"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
         <ul>
             <li></li>
             <li><a href="">O nas</a></li>
