--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,6 +25,10 @@
                 <div th:if="${param.success}">
                     <p>Twoje konto zostało pomyślnie założone.</p>
                 </div>
+
+                <div th:if="${param.fail}">
+                    <p>Konto już istnieje.</p>
+                </div>
             </form>
         <div class="side">
             <img src="css/orionimg.png">
