--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div th:if="${param.fail}">
-                    <p>Konto już istnieje.</p>
+                    <p>Konto już istnieje. Spróbuj ponownie.</p>
                 </div>
             </form>
         <div class="side">
