--- a/src/main/resources/static/css/adminstyle.css
+++ b/src/main/resources/static/css/adminstyle.css
@@ -20,14 +20,6 @@ nav {
     width: 100%;
 }
 
-label.logo {
-    color: white;
-    font-size: 25px;
-    line-height: 60px;
-    margin-right: 20px;
-    padding: 0 50px;
-}
-
 nav ul {
     float: right;
     margin-right: 15px;
@@ -57,34 +49,28 @@ nav a img {
     height: 90%;
 }
 
-form {
-    width: 300px;
-    font-size: 15px;
-    margin: 0 auto;
+h1 {
+    text-align: center;
 }
 
-form input {
-    border-radius: 8px;
-    border-width: 1px;
-    width: 200px;
-    height: 30px;
-}
-
-button {
-    margin: auto;
-    margin-top: 15px;
+body button {
+    margin: 15px auto;
+    display: block;
     font-weight: 0;
-    font-size: 14px;
+    font-size: 22px;
     color: #fff;
     background-color: #203a43;
-    padding: 10px 30px;
+    padding: 15px 15px;
     border: 2px solid #203a43;
     box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
     border-radius: 50px;
     transition: 1000ms;
     transform: translateY(0);
-    display: flex;
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+}
+
+body button:hover {
+    background-color: cadetblue;
 }
