--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,8 @@
             <input type="text" id="username" name="username" class="box" placeholder="Wpisz email">
             <input type="password" id="password" name="password" class="box" placeholder="Wpisz hasło">
             <input type="submit" value="Logowanie" id="submit"/>
-            <a href="">Zapomniałeś hasla?</a>
+            <a th:href="@{/register}">Nie masz konta? Zarejestruj się</a>
+            <a href="">Zapomniałeś hasła?</a>
         </form>
         <div class="side">
             <img src="css/orionimg.png">
