--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
-        <li><a href="">Kontakt</a></li>
+        <li><a href="">Kategorie</a></li>
         <li><a href="">Koszyk</a></li>
         <li><div class="login"><a th:href="@{/login}">Logowanie</a></div></li>
     </ul>
@@ -23,8 +23,9 @@
 
 <div class="content">
     <div class="item" th:each="item : ${items}">
-        <p class="specific-item" th:text="${item.getCategory()}"></p>
-        <img src="/css/products/intelcorei7.jpg" alt="">
+        <p th:text="${item.getId}" hidden></p>
+        <p class="specific-item" th:text="${item.getCategory().getCategoryName()}"></p>
+        <img th:src="${item.getImagePath()}" alt="Zdjęcie produktu">
         <p th:text="${item.getItemName()}"></p>
         <p th:text="${item.getPrice()}"></p>
         <button>KUP TERAZ</button>
