Products cards were combined with the main product card 02.20

--- a/src/main/resources/static/css/homestyle.css
+++ b/src/main/resources/static/css/homestyle.css
@@ -90,8 +90,9 @@ nav a img {
 }
 
 .item img {
-    width: 250px;
-    height: auto;
+    width: auto;
+    height: 60%;
+    margin: 5px;
     border: 1px rgba(171, 43, 43, 1);
 }
 
