--- a/src/main/resources/templates/itemadd.html
+++ b/src/main/resources/templates/itemadd.html
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <td>Cena:</td>
-        <td><input type="number" id="price" th:field="*{price}" name="price" min="1" max="50000" placeholder="1000 required"></td><br>
+        <td><input type="number" id="price" th:field="*{price}"  min="0.00" max="10000.00" step="0.01" required></td><br>
       </tr>
       <tr>
         <td>Ilość sztuk:</td>
