--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,6 +29,15 @@
                 <div th:if="${param.fail}">
                     <p>Konto już istnieje. Spróbuj ponownie.</p>
                 </div>
+
+                <div th:if="${param.fieldisempty}">
+                    <p>Któreś z pół jest puste. Spróbuj ponownie.</p>
+                </div>
+
+                <div th:if="${param.wrongnumberofcharacters}">
+                    <p>Sprawdź długość pól. Hasło może być za krótkie.</p>
+                </div>
+
             </form>
         <div class="side">
             <img src="css/orionimg.png">
