--- a/src/main/resources/templates/card.html
+++ b/src/main/resources/templates/card.html
@@ -8,30 +8,35 @@
 </head>
 
 <body>
-    <nav>
-        <a th:href="@{/}"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
-        <ul>
-            <li></li>
-            <li><a href="">O nas</a></li>
-            <li><a href="">Regulamin</a></li>
-            <li><a href="">Promocje</a></li>
-            <li><a href="">Kontakt</a></li>
-            <li><a href="">Koszyk</a></li>
-            <li><a href="">Ustawienia</a></li>
-        </ul>
-    </nav>
-    <div class="product">
-        <div class="item">
-            <img src="/css/products/intelcorei7.jpg" alt="">
-        </div>
-    <div class="informations" th:object="item">
-            <!--<p th:text="item.getCategory().getCategoryName()"></p>-->
-        <p th:text="${item.getItemName()}></p>
-            <p>2300,99 zł</p>
-            <button>KUP TERAZ</button>
+<nav>
+    <a th:href="@{/}"><img src="css/logo.png" class="logo" alt="OrionStore"></a>
+    <ul>
+        <li></li>
+        <li><a href="">O nas</a></li>
+        <li><a href="">Regulamin</a></li>
+        <li><a href="">Promocje</a></li>
+        <li><a href="">Kontakt</a></li>
+        <li><a href="">Koszyk</a></li>
+        <li><a href="">Ustawienia</a></li>
+    </ul>
+</nav>
+<div class="product" th:each="product : ${item}">
+    <div class="item">
+        <img th:src="${item.getImagePath()}" alt="">
     </div>
+    <div class="informations">
+        <p th:text="${item.getCategory().getCategoryName()}"></p>
+        <p th:text="${item.getItemName()}"></p>
+        <p th:text="${item.getPrice()}"></p>
+        <button>Dodaj do koszyka</button>
     </div>
-    <h2>Iorem ipLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h2>
+</div>
+<h2>Iorem ipLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+    to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
+    typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+    versions of Lorem Ipsum.</h2>
 
 
 </body>
