--- a/src/main/resources/static/css/cardstyle.css
+++ b/src/main/resources/static/css/cardstyle.css
@@ -62,6 +62,11 @@ nav a img {
     margin-right: 40vh;
 }
 
+.item img {
+    width: 90%;
+    height: 90%;
+}
+
 .informations {
     font-size: 50px;
     color: rgba(0, 3, 40, 1);
@@ -88,6 +93,9 @@ h2 {
     padding: 5vh;
     margin: 10vh;
     text-align: center;
+    position: fixed;
+    display: flex;
+    bottom: 0;
 }
 
 button:hover {
