Connected categories list to the categories from database in homepage 02.22

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
         <li><a href="">O nas</a></li>
         <li><a href="">Regulamin</a></li>
         <li><a href="">Promocje</a></li>
-        <li><a href="">Kategorie</a></li>
+        <li><a th:href="@{/categories}">Kategorie</a></li>
         <li><a href="">Koszyk</a></li>
         <li><div class="login"><a th:href="@{/login}">Logowanie</a></div></li>
     </ul>
