--- a/src/main/resources/static/css/categories.css
+++ b/src/main/resources/static/css/categories.css
@@ -53,23 +53,30 @@ h1 {
 }
 
 body button {
-    margin: 15px auto;
-    display: block;
+    margin: auto;
+    margin-top: 15px;
     font-weight: 0;
-    font-size: 22px;
+    font-size: 14px;
     color: #fff;
-    background-color: #203a43;
-    padding: 15px 15px;
-    border: 2px solid #203a43;
+    background-color: rgba(171, 43, 43, 1);
+    padding: 10px 30px;
+    border: 2px solid rgba(171, 43, 43, 1);
     box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
     border-radius: 50px;
     transition: 1000ms;
     transform: translateY(0);
+    display: flex;
     flex-direction: row;
     align-items: center;
     cursor: pointer;
 }
 
 body button:hover {
-    background-color: cadetblue;
+
+    transition: 500ms;
+    padding: 10px 50px;
+    transform: translateY(-0px);
+    background-color: #fff;
+    color: rgba(0, 3, 40, 1);
+    border: solid 2px rgba(0, 3, 40, 1);
 }
