Login finished and fixes 02.26

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -16,7 +16,8 @@
     </ul>
 </nav>
 
-<h1>WWitaj użytkowniku, wybierz odopowiednią dla siebie kategorię.</h1>
+<h1>Witaj użytkowniku, wybierz odopowiednią dla siebie kategorię.</h1>
+<p>Nasz sklep specalizuje się w wielu kategoriach.</p>
 <div th:each="category : ${categories}">
 <a th:href="@{/category/{id} (id=${category.getCategoryId()})}">
     <button th:text="${category.getCategoryName()}"></button>
