--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -11,7 +11,7 @@
 <nav>
     <ul>
         <li></li>
-        <li><a th:href="@{/}">OrionStore</a></li>
+        <li><a href="#">Kategorie</a></li>
         <li><a href="">Ustawienia</a></li>
     </ul>
 </nav>
