--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,17 +18,29 @@
         <li><a th:href="@{/categories}">Kategorie</a></li>
         <li><a href="">Koszyk</a></li>
         <li></li>
-        <li><div class="login"><a th:href="@{/login}">Logowanie</a></div></li>
+        <li>
+            <div class="login"><a th:href="@{/login}">Logowanie</a></div>
+        </li>
     </ul>
 </nav>
+<div class="hello" th:each="info : ${username}">
+    <p th:text="${info}"></p>
+</div>
+
+<div class="hello">
+    <form th:action="@{/}" method="post" th:object="${searcheditem}" class="form">
+        <label for="search">Wyszukaj: </label>
+        <input type="text" id="search" name="search" placeholder="Wyszukaj i naciśnij enter..." th:field="*{itemName}"></p>
+    </form>
+</div>
 
 <div class="sorting-buttons">
     <label for="first">Sortuj po:</label>
     <a th:href="@{/sort/desc}">
-    <button id="first">Cena: Malejąco</button>
+        <button id="first">Cena: Malejąco</button>
     </a>
     <a th:href="@{/sort/asc}">
-    <button id="second">Cena: Rosnąco</button>
+        <button id="second">Cena: Rosnąco</button>
     </a>
 </div>
 
@@ -39,7 +51,7 @@
         <p th:text="${item.getItemName()}"></p>
         <p th:text="${item.getPrice()} + zł"></p>
         <a th:href="@{/card/{id} (id=${item.getId})}">
-        <button>KUP TERAZ</button>
+            <button>KUP TERAZ</button>
         </a>
     </div>
 </div>
